--- a/app/src/main/res/layout/arrival_layout.xml
+++ b/app/src/main/res/layout/arrival_layout.xml
@@ -1,69 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bus_detials"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/arrival_info"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingStart="10dp"
-    android:paddingTop="5dp"
-    android:paddingEnd="10dp"
-    android:paddingBottom="5dp">
+    android:layout_height="wrap_content">
+
 
     <TableRow
-        android:id="@+id/row4"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent" >
 
         <TextView
+            android:id="@+id/tv_remaining"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center_vertical|center"
             android:text="还有"
             android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_d"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center"
+            android:text="距离"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tv_p"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_vertical|center"
+            android:text="车牌号"
+            android:textSize="15sp" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
         <TextView
             android:id="@+id/tv_stopdis"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="15sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="预计时间"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_remainTime"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="15sp" />
-    </TableRow>
-
-
-    <TableRow
-        android:id="@+id/row5"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="距离"
+            android:gravity="center_vertical|center"
+            android:text="@string/noData"
             android:textSize="15sp" />
 
         <TextView
@@ -71,16 +57,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="15sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="车牌号"
+            android:gravity="fill_vertical|center"
+            android:text="@string/noData"
             android:textSize="15sp" />
 
         <TextView
@@ -88,8 +66,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="fill_vertical|center"
+            android:text="@string/noData"
             android:textSize="15sp" />
     </TableRow>
+
 
 </TableLayout>
