--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -7,7 +7,7 @@
 
     <include
         android:id="@+id/item_content"
-        layout="@layout/bus_card_new"
+        layout="@layout/bus_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
