--- a/app/src/main/res/layout/bus_card.xml
+++ b/app/src/main/res/layout/bus_card.xml
@@ -16,12 +16,12 @@
         android:id="@+id/empty_view_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
         android:padding="5dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_stationName"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_line_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_stationName" />
+        app:layout_constraintTop_toTopOf="@+id/tv_line_name" />
 
     <TextView
         android:id="@+id/tv_line_name"
@@ -74,6 +74,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:singleLine="true"
         android:text="出发站"
         android:textSize="15sp"
         app:layout_constraintEnd_toStartOf="@+id/iv_bound_for"
@@ -86,6 +90,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="10dp"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:singleLine="true"
         android:text="终点站"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,7 +138,7 @@
         app:layout_constraintTop_toBottomOf="@+id/item_search" />
 
     <ImageView
-        android:id="@+id/callback_error"
+        android:id="@+id/callback_state"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="1dp"
@@ -140,6 +148,6 @@
         app:layout_constraintEnd_toEndOf="@+id/empty_view_loading"
         app:layout_constraintStart_toStartOf="@+id/empty_view_loading"
         app:layout_constraintTop_toTopOf="@+id/empty_view_loading"
-        app:srcCompat="@drawable/error" />
+        app:srcCompat="@drawable/call_success" />
 
 </android.support.constraint.ConstraintLayout>
