--- a/app/src/main/res/layout/busline_recycleview_item.xml
+++ b/app/src/main/res/layout/busline_recycleview_item.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/busName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:text="202303"
         android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/end_stop"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="20sp" />
-</LinearLayout>
+</android.support.v7.widget.CardView>
