--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -4,31 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <include
         android:id="@+id/item_content"
         layout="@layout/bus_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp" />
-
-    <!--<TextView
-        android:id="@+id/item_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@+id/item_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="1dp"
-        android:layout_toRightOf="@+id/item_content"
-        android:background="@android:color/holo_red_dark"
-        android:gravity="center"
-        android:padding="10dp"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        android:text="删除"
-        android:textColor="@android:color/white" />-->
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp" />
 
     <include
         android:id="@+id/item_menu"
@@ -40,7 +24,5 @@
         android:layout_marginStart="1dp"
         android:layout_marginEnd="11dp"
         android:layout_toEndOf="@+id/item_content" />
-
-
 
 </com.fitz.abus.fitzview.FitzSlideItemLayout>
