--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -10,7 +10,7 @@
     tools:context=".activity.MainActivity">
 
     <com.fitz.abus.fitzview.FitzActionBar
-        android:id="@+id/fitzactionbar"
+        android:id="@+id/main_fitzactionbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fitzactionbar">
+        app:layout_constraintTop_toBottomOf="@+id/main_fitzactionbar">
 
     </FrameLayout>
 
