--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,8 +5,5 @@
     android:id="@+id/fg_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layoutAnimation="@anim/layout_animation_fall_down"
-    android:layout_centerHorizontal="true">
-
-
-</com.fitz.abus.fitzview.FitzRecyclerView>
+    android:layout_centerHorizontal="true"
+    android:layoutAnimation="@anim/layout_animation_fall_down"/>
